continue following through book

--- a/lib/rumbl_web/templates/video/index.html.eex
+++ b/lib/rumbl_web/templates/video/index.html.eex
@@ -3,7 +3,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th> url</th>
+      <th>Url</th>
       <th>Title</th>
       <th>Description</th>
 
