fix scoped user create video

--- a/lib/rumbl_web/templates/video/edit.html.eex
+++ b/lib/rumbl_web/templates/video/edit.html.eex
@@ -1,5 +1,5 @@
 <h2>Edit Video</h2>
 
-<%= render "form.html", Map.put(assigns, :action, video_path(@conn, :update, @video)) %>
+<%= render "form.html", changeset: @changeset, categories: @categories, action: video_path(@conn, :update, @video) %>
 
 <span><%= link "Back", to: video_path(@conn, :index) %></span>
