--- a/lib/rumbl_web/templates/video/new.html.eex
+++ b/lib/rumbl_web/templates/video/new.html.eex
@@ -1,5 +1,5 @@
 <h2>New Video</h2>
 
-<%= render "form.html", Map.put(assigns, :action, video_path(@conn, :create)) %>
+<%= render "form.html", changeset: @changeset, categories: @categories, action: video_path(@conn, :create) %>
 
 <span><%= link "Back", to: video_path(@conn, :index) %></span>
